[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true } 
libp2p-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
libp2p = { workspace = true, features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "serde", "relay", "identify", "kad", "dns", "autonat" ] }
tokio = { workspace = true, features = ["full"] }
libp2p-webrtc = { workspace = true, features = ["tokio"] }
runtime = { workspace = true }

[target.'cfg(target_family="wasm")'.dependencies]
libp2p = { workspace = true, features = [ "wasm-bindgen", "macros", "gossipsub", "serde", "identify", "kad", "autonat", "relay" ] }
libp2p-webrtc-websys = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
console_error_panic_hook = { workspace = true }

[features]
default = []
c = []
wasm = []

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.28.0"
