[package]
name = "posemesh-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true } 
libp2p-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
posemesh-utils = {workspace = true }
thiserror = {workspace = true}
async-trait = {workspace = true}
mockall = {workspace = true}

[target.'cfg(not(target_family="wasm"))'.dependencies]
libp2p = { workspace = true, features = [ "ping", "dcutr", "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "serde", "relay", "identify", "kad", "dns", "autonat", "websocket" ] }
tokio = { workspace = true, features = ["full"] }
libp2p-webrtc = { workspace = true, features = ["tokio"] }
libp2p-websocket = { workspace = true }

[target.'cfg(target_family="wasm")'.dependencies]
libp2p = { workspace = true, features = [ "ping", "wasm-bindgen", "macros", "gossipsub", "serde", "identify", "kad", "autonat", "relay", "noise", "yamux", "dcutr" ] }
libp2p-webrtc-websys = { workspace = true }
libp2p-websocket-websys = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
console_error_panic_hook = { workspace = true }

[target.'cfg(target_family="wasm")'.dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]

[features]
default = []
c = []

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.28.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
