[package]
name = "posemesh-node-registration"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true }
