[package]
name = "uniffi-bindgen"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
uniffi.workspace = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
