[package]
name = "posemesh-utils"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/aukilabs/posemesh/tree/main/core"
description = "Utility functions and helpers for async operations, retries, and timeouts, supporting both native and WebAssembly targets."
license = "MIT"
rust-version.workspace = true

[dependencies]
futures = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
