[package]
name = "client-example"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
domain = { workspace = true }
tokio = { workspace = true }
networking = { workspace = true }
quick-protobuf = { workspace = true }
futures = { workspace = true }
tracing_subscriber = {workspace = true}
tracing = {workspace = true}
