[package]
name = "client-example"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
posemesh-domain = { workspace = true }
tokio = { workspace = true }
posemesh-networking = { workspace = true }
quick-protobuf = { workspace = true }
futures = { workspace = true }
tracing-subscriber = {workspace = true}
tracing = {workspace = true}
