[package]
name = "data-node"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
networking = { workspace = true }
quick-protobuf = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
jsonwebtoken = "9.3.0"
uuid = "1.13.2"
domain = {workspace = true, features = ["fs"]}
regex = "1.11.1"
