[package]
name = "posemesh-hello-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
dotenvy = "0.15"
axum = { version = "0.7" }
uuid = { workspace = true }

posemesh-compute-node = { path = "../../../compute-node" }
posemesh-compute-node-runner-api = { path = "../.." }
