[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "auki-domain-client"
version = "1.4.0-rc.4"  # This will be replaced by Makefile
description = "HTTP client library for interacting with AukiLabs domain data services"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "AukiLabs"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[tool.maturin]
module-name = "auki_domain_client"
manifest-path = "../../Cargo.toml"
bindings = "uniffi"
features = ["uniffi"]

[tool.cibuildwheel]
# Build wheels for all supported platforms and Python versions
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
# Skip tests during wheel building (tests are run separately)
skip = []
# Use maturin as the build frontend
build-frontend = "maturin"
# Environment variables for the build
environment = {}
# Before building, ensure bindings are generated
before-build = "cd ../../.. && make build-domain-http-uniffi LANG=python"

