[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "auki-domain-client"
version = "1.4.0-rc.4"  # This will be replaced by Makefile
description = "HTTP client library for interacting with AukiLabs domain data services"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AukiLabs"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[tool.maturin]
module-name = "auki_domain_client"
manifest-path = "../../Cargo.toml"
bindings = "uniffi"
features = ["uniffi"]

[tool.cibuildwheel]
# Build wheels for all supported platforms and Python versions
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
# Skip tests during wheel building (tests are run separately)
skip = []
environment = { MATURIN_NO_INSTALL_RUST = "1" }
